# ImageCompressing

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  imageCompressor.c  imageCompressor.h  libthumbnailer.dylib  thumbnailer.cbp
Testing/: TAG
